--- a/arrays-loops-styles/index.html
+++ b/arrays-loops-styles/index.html
@@ -75,6 +75,7 @@
 		<section class="container">
 			<br>
 			<h2 id="titulo-form">Add new patient</h2>
+			<ul id="error-messages"></ul>
 			<form id="form-adiciona">
 				<div class="grupo">
 					<label for="nome">Name:</label>
@@ -96,7 +97,7 @@
 				<button id="adicionar-paciente" class="botao bto-principal">Add</button>
 			</form>
 		</section>
-		<script src="js/main.js"></script>
+		<script src="js/calculate-bmi.js"></script>
 		<script src="js/form.js"></script>
 	</body>
 </html>
